# CRMExtender

./: .dockerignore  .env.example  .gitignore  .~lock.Relationship_Intelligence_Platform_Architecture.docx#  =6.0.0  CIM_PRD.Docx  Dockerfile  LICENSE.md  README.md  Relationship_Intelligence_Platform_Architecture.docx  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
PRDs/: adaptive-grid-intelligence-prd.md  admin-system-prd.md  admin-system-tdd.md  communication-entity-base-prd.md  communication-entity-tdd.md  communication-participant-resolution-prd.md  communication-provider-sync-prd.md  communication-published-summary-prd.md  communication-triage-prd.md  communication-view-corrections.md  communication-view-prd.md  communications-prd.md  communications-view-tdd.md  company-domain-resolution-prd.md  company-enrichment-prd.md  company-entity-base-prd.md  company-entity-tdd.md  company-hierarchy-prd.md  company-intelligence-prd.md  company-management-prd.md  company-merge-prd.md  company-social-profiles-prd.md  contact-ai-intelligence-prd.md  contact-enrichment-prd.md  contact-entity-base-prd.md  contact-entity-tdd.md  contact-identity-resolution-prd.md  contact-import-export-prd.md  contact-management-prd.md  contact-merge-split-prd.md  contact-relationship-intelligence-prd.md  conversation-ai-intelligence-prd.md  conversation-entity-base-prd.md  conversation-entity-tdd.md  conversation-formation-prd.md  conversation-view-prd.md  conversation-views-alerts-prd.md  conversations-prd.md  custom-objects-field-system-prd.md  custom-objects-framework-prd.md  (+37 more)
(+992 files in other folders)
