[project]
name = "crm-extender-poc"
version = "0.1.0"
description = "Gmail Conversation Aggregation PoC"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "anthropic>=0.39.0",
    "rich>=13.7.0",
    "mail-parser-reply>=0.1.2",
    "python-dotenv>=1.0.0",
    "quotequail>=0.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",
    "httpx>=0.27.0",
    "phonenumbers>=8.13.0",
    "vobject>=0.9.6",
]

[project.scripts]
poc = "poc.__main__:main"

[tool.setuptools.packages.find]
include = ["poc*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
